-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15
-
None
-
dac2c8aec4917742aed6e311cf542dc37da60809 (qt/qtdeclarative/dev) 03d3d26f6e0cc1698b3a16b0695dcc71420219e8 (qt/qtdeclarative/5.15)
TableView tries to limit the number of times it calculates contentWidth/Height. This seems to go wrong if you first have only one row, then later add a lot of rows that will make the content height grow larger than the size of the TableView.
For Gerrit Dashboard: QTBUG-87680 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
318363,3 | TableView: ensure we update content size upon model changes | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
318385,3 | TableView: ensure we update content size upon model changes | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |